# qubitverse

./: .gitignore  CMakeLists.txt  README.md  compile.rc
.github/workflows/: main_qubitverse.yml
qubitverse/backend/: index.js  package-lock.json  package.json
qubitverse/simulator/gates/: gates.cc  gates.hh
qubitverse/simulator/lexer/: lexer.cc  lexer.hh  token.hh
qubitverse/simulator/parser/: ast.hh  parser.cc  parser.hh
qubitverse/simulator/simulator/: simulator.cc  temp.cpp
qubitverse/visualizer/: index.html  package-lock.json  package.json  vite.config.js
qubitverse/visualizer/qbitverse_ui/: package-lock.json  package.json
qubitverse/visualizer/qubitverse/: package-lock.json  package.json
qubitverse/visualizer/qubitverse/src/: App.js  QuantumCircuit.js
qubitverse/visualizer/src/: App.jsx
qubitverse/visualizer/src/components/: HilbertSpaceResult.jsx  MeasurementChart.jsx  NQubitInput.jsx  Navbar.jsx  ParseResultData.jsx  ProbGraph.jsx  QuantumCircuit.jsx  SendToBackEnd.jsx  circuitDataExtractor.jsx
qubitverse/visualizer/src/components/ui/: button.jsx  dialog.jsx
